<resources>
    <string name="app_name">Relax reminder</string>
    <string name="welcome_to">Bienvenido a</string>
    <string name="title_app">Relax Reminder</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="menu_home">Home</string>
    <string name="menu_routine">Rutina</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_fragment_alarms">No hay alarmas configuradas</string>
    <string name="blank_fragment_programming">No hay programaciones configuradas</string>
    <string name="description">Descripción</string>
    <string name="start_in">Inicia en</string>
    <string name="end_in">Duración</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="alarm">Alarma</string>
    <string name="routine_programming">Programación de rutina</string>
    <string name="good_job">Buen trabajo!!!</string>
    <string name="create_successfull">creada exitosamente!!!</string>
    <string name="accept">Aceptar</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minutes">Minutos</string>
    <string name="title_add_alarm">Agregar alarma</string>
</resources>