<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/rr_background_activity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/rr_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_app"
            android:textColor="@color/rr_text"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/rr_background_component"
            android:backgroundTint="@color/rr_primary"
            app:cornerRadius="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:rippleColor="@color/rr_ripple_effect_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/rr_primary"
            android:backgroundTint="@null"
            app:cornerRadius="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>