<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddAlarmFragment"
    android:background="@color/rr_background_activity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingTop="20sp"
        android:layout_marginBottom="70sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_gravity="top">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:endIconMode="clear_text"
                android:layout_marginTop="16dp"
                app:counterMaxLength="100"
                app:counterEnabled="true"
                >
            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:completionThreshold="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_in"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="16dp"
                    app:counterMaxLength="3"
                    app:counterEnabled="true"
                    app:counterOverflowTextAppearance="@style/CounterTextAppearance"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="number|textNoSuggestions"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_in"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="16dp"
                    app:counterMaxLength="3"
                    app:counterEnabled="true"
                    app:counterOverflowTextAppearance="@style/CounterTextAppearance"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="number|textNoSuggestions"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/rr_background_item_list"
                android:backgroundTint="@color/rr_primary"
                app:cornerRadius="20sp"
                android:layout_gravity="start"
                app:rippleColor="@color/rr_ripple_effect_primary"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/rr_primary"
                android:backgroundTint="@null"
                app:cornerRadius="20sp"
                android:layout_gravity="end"
                android:textStyle="bold"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>