<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/add"
            android:padding="8dp"
            android:textColor="@color/rr_text_bottom_sheet"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="8dp"
            android:id="@+id/cancelButton" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:background="@color/rr_text_bottom_sheet" />

    <LinearLayout
        android:id="@+id/layoutVideo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_access_alarm_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="@color/rr_text_bottom_sheet"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:background="@color/rr_text_bottom_sheet" />

    <LinearLayout
        android:id="@+id/layoutShorts"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_calendar_month_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_programming"
            android:textColor="@color/rr_text_bottom_sheet"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>